import com.github.spotbugs.snom.Confidence
import com.github.spotbugs.snom.Effort

buildscript {
    repositories {
        mavenCentral()
        maven { url = "https://plugins.gradle.org/m2/" }
    }
}

plugins {
  alias(libs.plugins.spotbugs)
}

defaultTasks 'build'

wrapper {
    gradleVersion = '9.5.1'
    distributionType = Wrapper.DistributionType.ALL
}

allprojects {
    group = group
    version = version
}

configurations.configureEach {
    resolutionStrategy {
        force libs.xml.apis
    }
}

configure(subprojects.findAll { ['core', 'examples'].contains(it.name) }) {
    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    apply plugin: 'project-report'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'checkstyle'

    jar.dependsOn(checkstyleMain)

    checkstyle {
        // Use the default version from Gradle
        // https://github.com/gradle/gradle/blob/v6.7.1/subprojects/code-quality/src/main/groovy/org/gradle/api/plugins/quality/CheckstylePlugin.java#L37
        configFile = file("$rootProject.rootDir/checkstyle_checks.xml")
        configProperties = ['basedir': project.rootDir.path]
        reportsDir = layout.buildDirectory.dir("reports/CheckstyleReports").get().asFile
    }

    spotbugs {
        toolVersion = libs.versions.spotbugs.asProvider().get() // com.github.spotbugs:spotbugs-annotations
        reportsDir = layout.buildDirectory.dir("reports/SpotBugsReports").get().asFile
        effort = Effort.MAX
        reportLevel = Confidence.valueOf("HIGH")
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    compileJava {
        options.encoding = 'utf-8'
        options.deprecation = true
        options.compilerArgs += ['-Xlint:unchecked', '-parameters']
    }

    dependencies {
        testImplementation(
            libs.mockito.core,
        )
    }

    test {
        jvmArgs '--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED'
        minHeapSize = "128m"
        maxHeapSize = "1G"
        testLogging {
            exceptionFormat = 'full'
        }
    }

    tasks.withType(Javadoc).tap {
        configureEach {
            options.encoding = 'utf-8'
        }
    }
}

tasks.register('docs') {
    enabled = false
}
